fix name overflow in user card

--- a/src/css/birthday-card.css
+++ b/src/css/birthday-card.css
@@ -17,6 +17,7 @@
 .accordion-content {
     padding: 0 !important;
     margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
 }
 
 .day-btn {
@@ -75,7 +76,7 @@
 }
 
 .user-card {
-    height: 12.3em !important;
+    height: 12em !important;
     width: 9em !important;
     margin-right: 0.8rem !important;
     margin-top: 3px !important;
@@ -244,6 +245,7 @@
 
 .carousel {
     width: 100% !important;
+    max-height:100% !important;
 }
 .carousel-mobile {
     width: 100% !important;
